Fix resolve JUnit Platform error
* Initial plan

* Fix CI test failures: add junit-platform-launcher and fix deprecated APIs

Co-authored-by: bytemain <13938334+bytemain@users.noreply.github.com>

* Fix 25 test failures by implementing TestSudokuTypeRepo

Co-authored-by: bytemain <13938334+bytemain@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: bytemain <13938334+bytemain@users.noreply.github.com>